--- a/html/view/listarCarro.html
+++ b/html/view/listarCarro.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html>
-<head lang="pt-br">  
+<html lang="pt-br">
+
+<head>
     <meta charset="UTF-8">
-    <title>TABLE</title>
-
-
+    <title>Tech Cars</title>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../bootstrap/css/style.css">
 
     <script type="application/javascript" src="../jquery/jquery.min.js"></script>
     <script type="application/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
 
-
-
 </head>
-<body>
+
+<body >
     
     <div class="container">
         <div>
+                        <!--https://docs.angularjs.org/api/ng/directive/ngRepeat-->
+                        <!--<input type="search" ng-model="q" placeholder="filter friends..." aria-label="filter friends" />
+                            <ul class="example-animate-container">
+                                <li class="animate-repeat" ng-repeat="friend in friends | filter:q as results">
+                                [{{$index + 1}}] {{friend.name}} who is {{friend.age}} years old.
+                                </li>
+                                <li class="animate-repeat" ng-if="results.length === 0">
+                                <strong>No results found...</strong>
+                                </li>
+                            </ul>
+                        -->
+
             <table class="table table-hover">
-                <thead class="thead-inverse">
+                <thead>
                     <tr>
                         <th>Modelo</th>
                         <th>Marca</th>
